--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,13 +7,15 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "2gis-maps": "^3.7.1",
+    "2gis-maps-react": "^0.0.4",
     "antd": "4.19.5",
     "eslint": "8.12.0",
     "node-sass": "7.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-redux": "7.2.8",
-    "react-scripts": "5.0.0"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
